--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-share-vpn.htm" title="VPN百科 - 10月23日21.5M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 10月23日21.5M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-vpn-proxy.htm" title="VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 11月6日22M/S|免费Singbox节点/SSR节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-vpn-node.htm" title="VPN百科 - 10月25日21.6M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享">VPN百科 - 10月25日21.6M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-22-free-vpn.htm" title="VPN百科 - 10月22日22M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 10月22日22M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-github.htm" title="VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月16日22.7M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-mianfei-vpn.htm" title="VPN百科 - 10月13日19.5M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月13日19.5M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-vpn.htm" title="VPN百科 - 10月24日19.3M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 10月24日19.3M/S|免费Clash节点/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-top-vpn-node.htm" title="VPN百科 - 10月12日18.1M/S|免费SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 10月12日18.1M/S|免费SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-node-share-links.htm" title="VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享">VPN百科 - 10月3日21M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-vpn-proxy.htm" title="VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 10月8日18.2M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-top-vpn.htm" title="VPN百科 - 11月11日20.1M/S|免费Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅节点分享">VPN百科 - 11月11日20.1M/S|免费Singbox节点/Shadowrocket节点/V2ray节点/SSR节点/Clash节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-12-node-share-links.htm" title="VPN百科 - 11月12日20.7M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅节点分享">VPN百科 - 11月12日20.7M/S|免费Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-share-vpn.htm" title="VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 10月5日21.1M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-vpn-free.htm" title="VPN百科 - 11月5日19.7M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享">VPN百科 - 11月5日19.7M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-3-vpn-node.htm" title="VPN百科 - 11月3日21.1M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享">VPN百科 - 11月3日21.1M/S|免费V2ray节点/Singbox节点/SSR节点/Clash节点/Shadowrocket节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-27-top-vpn-node.htm" title="VPN百科 - 10月27日21.3M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 10月27日21.3M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/Clash节点/SSR节点订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-top-vpn-node.htm" title="VPN百科 - 11月1日22.1M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享">VPN百科 - 11月1日22.1M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-7-mianfei-vpn.htm" title="VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享">VPN百科 - 11月7日23M/S|免费V2ray节点/Singbox节点/SSR节点/Shadowrocket节点/Clash节点订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
